# minizinc-pentominoes-generator

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml  deny.yml
data/: size_10_tiles_10_seed_17.dzn  size_10_tiles_10_seed_42.dzn  size_10_tiles_10_seed_42_strategy_close.dzn  size_10_tiles_10_seed_4711.dzn  size_10_tiles_10_seed_4711_strategy_far.dzn  size_10_tiles_15_seed_17.dzn  size_10_tiles_15_seed_17_strategy_far.dzn  size_10_tiles_15_seed_42.dzn  size_10_tiles_15_seed_42_strategy_source.dzn  size_10_tiles_15_seed_4711.dzn  size_10_tiles_15_seed_4711_strategy_far.dzn  size_10_tiles_20_seed_17.dzn  size_10_tiles_20_seed_17_strategy_target.dzn  size_10_tiles_20_seed_42.dzn  size_10_tiles_20_seed_42_strategy_close.dzn  size_10_tiles_20_seed_4711.dzn  size_10_tiles_20_seed_4711_strategy_target.dzn  size_10_tiles_5_seed_17.dzn  size_10_tiles_5_seed_17_strategy_target.dzn  size_10_tiles_5_seed_42.dzn  size_10_tiles_5_seed_42_strategy_source.dzn  size_10_tiles_5_seed_4711.dzn  size_10_tiles_5_seed_4711_strategy_far.dzn  size_15_tiles_10_seed_17.dzn  size_15_tiles_10_seed_17_strategy_close.dzn  size_15_tiles_10_seed_42.dzn  size_15_tiles_10_seed_42_strategy_close.dzn  size_15_tiles_10_seed_4711.dzn  size_15_tiles_10_seed_4711_strategy_target.dzn  size_15_tiles_15_seed_17.dzn  size_15_tiles_15_seed_42.dzn  size_15_tiles_15_seed_42_strategy_far.dzn  size_15_tiles_15_seed_4711.dzn  size_15_tiles_15_seed_4711_strategy_close.dzn  size_15_tiles_20_seed_17.dzn  size_15_tiles_20_seed_17_strategy_far.dzn  size_15_tiles_20_seed_42.dzn  size_15_tiles_20_seed_42_strategy_source.dzn  size_15_tiles_20_seed_4711.dzn  size_15_tiles_20_seed_4711_strategy_close.dzn  (+51 more)
model/: pentominoes.mzn
scripts/: generate.sh
src/: lib.rs  main.rs  symmetries.rs  tile_expressions.rs
