[package]
name = "minizinc-pentominoes-generator"
version = "0.1.0"
authors = ["zayenz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
color-eyre = "0.5.1"
rand = "0.7.3"
rand_xoshiro = "0.4.0"
itertools = "0.9.0"