[package]
name = "minizinc-pentominoes-generator"
version = "0.1.0"
authors = ["Mikael Zayenz Lagerkvist <research@zayenz.se>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A generator for pentominos-like packing instances in MiniZinc, including a model"
repository = "https://github.com/zayenz/minizinc-pentominoes-generator"
readme = "README.md"
categories = []
keywords = []

[lib]
name = "minizinc_pentominoes_generator"
path = "src/lib.rs"

[[bin]]
name = "minizinc-pentominoes-generator"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.6"
color-eyre = "0.5.11"
rand = "0.8.4"
rand_xoshiro = "0.6.0"
itertools = "0.10.1"
indicatif = "0.17.2"